Fix #126293: Crash when moving mouse after enabling Dyntopo

Introduced in 45d9bfa734aae456ca83953e56953fae94617151

We currently do not invalidate the `active_vert` variable when changing
between different mesh implementations. Therefore, it is incorrect to
assume the value can be turned into a valid concrete reference simply
based on the PBVH type.

Pull Request: https://projects.blender.org/blender/blender/pulls/126299