source/blender/editors/sculpt_paint/paint_cursor.cc
@@ -1250,8 +1250,14 @@ struct PaintCursorContext {
   Sculpt *sd;
   SculptSession *ss;
 
-  /* Previous active vertex, used to determine if the preview is updated for the pose brush.  */
-  int prev_active_vert_index;
+  /**
+   * Previous active vertex, used to determine if the preview is updated for the pose brush.
+   *
+   * For now, this cannot be switched to using a straight index via #prev_active_vert_index() as
+   * the underlying SculptSession variable is not invalidated upon changing modes. Once we no
+   * longer persist PBVHVertRef inside SculptSession, this can be updated as well.
+   */
+  PBVHVertRef prev_active_vert_ref;
 
   bool is_stroke_active;
   bool is_cursor_over_mesh;
@@ -1408,7 +1414,7 @@ static void paint_cursor_sculpt_session_update_and_init(PaintCursorContext *pcon
 
   /* This updates the active vertex, which is needed for most of the Sculpt/Vertex Colors tools to
    * work correctly */
-  pcontext->prev_active_vert_index = ss.active_vert_index();
+  pcontext->prev_active_vert_ref = ss.active_vert_ref();
   if (!ups.stroke_active) {
     pcontext->is_cursor_over_mesh = SCULPT_cursor_geometry_info_update(
         C, &gi, mval_fl, (pcontext->brush->falloff_shape == PAINT_FALLOFF_SHAPE_SPHERE));
@@ -1796,8 +1802,8 @@ static void paint_cursor_draw_3d_view_brush_cursor_inactive(PaintCursorContext *
      * cursor won't be tagged to update, so always initialize the preview chain if it is
      * nullptr before drawing it. */
     SculptSession &ss = *pcontext->ss;
-    const bool update_previews = pcontext->prev_active_vert_index !=
-                                 pcontext->ss->active_vert_index();
+    const bool update_previews = pcontext->prev_active_vert_ref.i !=
+                                 pcontext->ss->active_vert_ref().i;
     if (update_previews || !ss.pose_ik_chain_preview) {
       BKE_sculpt_update_object_for_edit(pcontext->depsgraph, &active_object, false);
 
